--- a/front/package.json
+++ b/front/package.json
@@ -10,7 +10,9 @@
     "build": "cross-env NODE_ENV=production browserify -g envify src/main.js | uglifyjs -c warnings=false -m > dist/build.js"
   },
   "dependencies": {
-    "vue": "^2.0.1"
+    "axios": "^0.17.0",
+    "vue": "^2.0.1",
+    "vue-router": "latest"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
